fixed chat window scrolling

--- a/chat/templates/chat/chat.html
+++ b/chat/templates/chat/chat.html
@@ -78,6 +78,7 @@
                 'beforeend',
                 data.message + '\n'
             )
+            content.scrollTop = content.scrollHeight;
         }
 
         chatSocket.onopen = function (event) {
