--- a/chat/templates/chat/chat.html
+++ b/chat/templates/chat/chat.html
@@ -22,12 +22,19 @@
 <body>
 <div class="container" style="height: 100%; margin: 0 auto;">
     <div class="wrapper" style="min-height: 100%; display: flex; flex-direction: column;">
-        <header class="header mt-2" style="height:50px;">
-            <span class="d-flex align-items-center my-2" style="height: 40px;">
-                <label for="username-input">Username</label>
-                <input type="text" class="username-input form-control shadow border-2 ms-2"
-                       id="username-input" value="{{ username }}">
-            </span>
+        <header class="header mt-2 px-2" style="height:50px;">
+            <div class="row d-flex align-items-center">
+                <div class="col">
+                    <span class="d-flex align-items-center my-2" style="height: 40px;">
+                        <label for="username-input">Username</label>
+                        <input type="text" class="username-input form-control shadow border-2 ms-2"
+                               id="username-input" value="{{ username }}">
+                    </span>
+                </div>
+                <div class="col-auto">
+                    <span class="d-flex align-items-center my-2">Online:&nbsp;<span id="onlineCounter">0</span></span>
+                </div>
+            </div>
         </header>
         <textarea readonly class="content card shadow border-2 p-2 mt-2" id="content"
                   style="flex: 1; resize: none; outline: none;"></textarea>
@@ -64,21 +71,27 @@
     const usernameInput = document.getElementById('username-input');
     const messageInput = document.getElementById('message-input');
     const content = document.getElementById('content');
+    const onlineCounter = document.getElementById('onlineCounter');
     const modal = new bootstrap.Modal(document.getElementById('modal'));
 
     function connect() {
-        return new WebSocket('wss:///' + window.location.host + '/ws/chat/');
+        return new WebSocket('ws:///' + window.location.host + '/ws/chat/');
     }
 
     function init() {
         chatSocket = connect();
         chatSocket.onmessage = function (event) {
             const data = JSON.parse(event.data);
-            content.insertAdjacentHTML(
-                'beforeend',
-                data.message + '\n'
-            )
-            content.scrollTop = content.scrollHeight;
+            if (data.message) {
+                content.insertAdjacentHTML(
+                    'beforeend',
+                    data.message + '\n'
+                )
+                content.scrollTop = content.scrollHeight;
+            }
+            if (data.users_count) {
+                onlineCounter.innerText = data.users_count;
+            }
         }
 
         chatSocket.onopen = function (event) {
